Move Roles and HistoryTypes to their models. Globalize Stripe Status Enum. Change navbar and sidebar icons to fontawesome. Expand customer info on stripe getCustomerByID.

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -33942,5 +33942,11 @@ label.required:after {
     color: green;
 }
 
+.valid {
+    color: green;
+}
+.invalid {
+    color: red;
+}
 
 /*# sourceMappingURL=../maps/vertical-layout-light/style.css.map */
