--- a/views/dashboards/customer.ejs
+++ b/views/dashboards/customer.ejs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="./vendors/typicons/typicons.css">
     <link rel="stylesheet" href="./vendors/simple-line-icons/css/simple-line-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./vendors/css/vendor.bundle.base.css">
     <!-- endinject -->
     <!-- Plugin css for this page -->
